some missing hover and menu overflow bug fixes

--- a/sass/components/effect.scss
+++ b/sass/components/effect.scss
@@ -56,6 +56,8 @@
   &__more {
     display: block;
     margin-top: 10px;
+    color: $accent-color;
+    text-decoration: underline;
   }
 
   &__banner {
