--- a/sass/components/header.scss
+++ b/sass/components/header.scss
@@ -9,7 +9,7 @@
   background-position: 50% 0px;
   background-size: 700px 488px;
   background-color: $dark-grey-color;
-  overflow: hidden;
+  // overflow: hidden;
   width: 100%;
 
   @media (min-resolution: 1.5dppx) {
